--- a/style/main.less
+++ b/style/main.less
@@ -13,22 +13,46 @@ a{
 
 
 
+
+
+
+////////////////////////////////////////////////////////////////////////////////////
 .wrapper{
-    width: 370px;
+    width: 900px;
     margin: 0 auto;
     
-    .hoome4{
-        margin-top: 260px;
-    }
 }
+    .page{
+        margin-top: 76px;
+        width: 900px;
+        
+        
+    }
+    .page__text p{
+        margin: 0px 0px 20px 0px;
+    }
 
-
-
-
-
-
-
-
+    .page__text {
+        font-size: 16px;
+        line-height: 150%;
+    }
+.page__title{
+    font-size: 40px;
+    margin: 0px 0px 20px 0px;
+}
+    .page__section1{
+        background-color: rgb(59, 122, 122);
+    }
+    .page__section2{
+        background-color: rgb(91, 67, 155);
+    }
+    .page__section3{
+        background-color: rgb(98, 156, 101);
+    }
+    .page__section4{
+        background-color: rgb(226, 176, 82);
+    }
+///////////////////////////////////////////////////////////////////////////////////////
 
 
 
@@ -38,7 +62,7 @@ a{
     left: 0;
     width: 100%;
     z-index: 10;
-    background-color: red;
+    background-color: rgb(129, 90, 90);
     .header__container{
         max-width: 1200px;
         margin: 0px auto;
