--- a/style/main.less
+++ b/style/main.less
@@ -52,6 +52,17 @@ a{
     .page__section4{
         background-color: rgb(226, 176, 82);
     }
+
+
+.footer{
+    background:  #333333;
+}
+
+.footer__container{
+    max-width: 1140px;
+    color: #939393;
+}
+
 ///////////////////////////////////////////////////////////////////////////////////////
 
 
