--- a/style/main.less
+++ b/style/main.less
@@ -83,13 +83,17 @@ a{
         justify-content: space-between;
         min-height: 70px;
         .header__logo{
-            position: relative;
-            z-index: 8;
-            font-size: 48px;
-            background-color: aliceblue;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
+            .logo__text{
+                font-size: 41px;
+                position: relative;
+                z-index: 8;
+                color: white;
+            }
+            
+            
+            
+            
+            
         }
         .menu__body{
             .menu__list{
