--- a/style/main.less
+++ b/style/main.less
@@ -182,6 +182,40 @@ body._mobile .menu__list > li._active .menu__sub-list{
     pointer-events: all;
 }
 
+///////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
+
+footer{
+    .footer__container{
+        padding-top: 50px;
+        display: flex;
+        .Aboutus__col{
+
+        }
+        .nav_col{
+            
+        }
+        .Subscribe__col{
+            
+        }
+    }
+    .copyright__section{
+        padding-top: 50px;
+        padding-bottom: 50px;
+        border-top: 1px solid rgba(255, 255, 255, 0.1) !important;
+        margin-top: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+}
+
+
+
+
+///////////////////////////////////////////////////////////footer end////////////////////////////////////////////////////////////
+
+
 
 @media only screen and (min-width: 1px) {
     .menu__list{
