--- a/style/main.less
+++ b/style/main.less
@@ -182,20 +182,36 @@ body._mobile .menu__list > li._active .menu__sub-list{
     pointer-events: all;
 }
 
-////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
 
 footer{
     .footer__container{
+        p{
+            color: #737373;
+        }
+        .footer-heading{
+            font-size: 16px;
+            color: #fff;
+            text-transform: uppercase;
+            letter-spacing: .2rem;
+        }
         padding-top: 50px;
         display: flex;
         .Aboutus__col{
-
+            width: 33.33333%;
         }
         .nav_col{
-            
+            width: 33.33333%;
+            display: flex;
+            .nav__section__one{
+                width: 50%;
+            }
+            .nav__section__two{
+                width: 50%;
+            }
         }
         .Subscribe__col{
-            
+            width: 33.33333%;
         }
     }
     .copyright__section{
