--- a/style/main.less
+++ b/style/main.less
@@ -494,11 +494,11 @@ footer{
     height: 38px;
   }
   body .swiper-button-next {
-    right: 241px;
-    margin-top: calc(177px - (var(--swiper-navigation-size)/2));
+    right: 255px;
+    margin-top: calc(482px - (var(--swiper-navigation-size)/2));
     color: #000;
     font-size: 7px;
-    
+    top: 0;
 }
   
   body .swiper-button-next:after {
@@ -512,7 +512,8 @@ footer{
   body .swiper-button-prev {
     left: 351px;
     font-size: 7px;
-    margin-top: calc(187px - (var(--swiper-navigation-size)/2));
+    margin-top: calc(496px - (var(--swiper-navigation-size)/2));
+    top: 0;
 }
   }
 
