swiper section done border 2px solid active

--- a/style/main.css
+++ b/style/main.css
@@ -326,15 +326,18 @@ footer .slide_box .slide_box_div {
   }
   .swiper-slide-active a {
     background: #000000;
-    border-radius: 34%;
+    border-radius: 100%;
     line-height: 31px;
     color: #ffffff;
+    padding: 0 12px;
+    border: 2px solid var(--bg-color);
   }
   body .swiper-slide-active .menu__sub-linkk {
     background: #ffffff;
     border-radius: 0%;
     line-height: 0px;
     color: black;
+    border: none;
   }
   body .swiper-wrapper {
     margin-left: -453px;
