--- a/style/main.less
+++ b/style/main.less
@@ -464,6 +464,7 @@ footer{
     visibility: visible;
     transform: translate(0px, 20%);
     pointer-events: all;
+    
   }
   
   
@@ -478,15 +479,18 @@ footer{
   }
   .swiper-slide-active a {
     background: #000000;
-    border-radius: 34%;
+    border-radius: 100%;
     line-height: 31px;
     color: rgb(255, 255, 255);
+    padding: 0 12px;
+    border: 2px solid var(--bg-color);
   }
   body .swiper-slide-active .menu__sub-linkk {
     background: #ffffff;
     border-radius: 0%; 
     line-height: 0px;
     color: black;
+    border: none;
   }
  
   body .swiper-wrapper {
