--- a/style/main.css
+++ b/style/main.css
@@ -15,49 +15,81 @@ a {
   width: 1140px;
   margin: 0 auto;
 }
-.div__aaa {
-  margin-top: 60px;
+.one {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #cacaca;
+  height: 250px;
+  background: #222831;
+  color: white;
+  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 }
-:root {
-  --bg-color: #fad304;
+.two {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #cacaca;
+  height: 250px;
+  background: #00ADB5;
+  color: white;
+  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 }
-.aaa {
-  font-family: 'Roboto', sans-serif;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 1.3rem;
-  padding: 20px 40px;
-  position: relative;
-  cursor: pointer;
+.three {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #cacaca;
+  height: 250px;
+  background: #EEEEEE;
+  color: white;
+  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 }
-.aaa:hover {
-  color: #fff;
-}
-.aaa::before,
-.aaa::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
+.menu__link::after {
+  content: '';
   width: 100%;
-  height: 100%;
-  transition: transform 0.3s ease, filter 0.5s ease;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  bottom: 15px;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease;
 }
-.aaa::after {
-  z-index: 1;
-  transform: translate(4px, -4px);
-  background: linear-gradient(to right, black 0 100%) no-repeat top left / calc(100% - 30px) 2px, /*  bottom line    */ linear-gradient(to right, black 0 100%) no-repeat bottom right / calc(100% - 30px) 2px, /*   right angle   */ linear-gradient(45deg, transparent calc(50% - 1px), black calc(50% - 1px) calc(50% + 1px), transparent calc(50% + 1px)) no-repeat right top / 31px 31px, /*     left angle */ linear-gradient(45deg, transparent calc(50% - 1px), black calc(50% - 1px) calc(50% + 1px), transparent calc(50% + 1px)) no-repeat left bottom / 31px 31px, /*     left pipe */ linear-gradient(to right, black 0 100%) no-repeat 0 0 / 2px calc(100% - 30px), /*     right pipe */ linear-gradient(to right, black 0 100%) no-repeat bottom right / 2px calc(100% - 30px);
+.menu__link:hover::after {
+  transform: scaleX(1);
 }
-.aaa::before {
-  z-index: -1;
-  transform: translate(-4px, 4px);
-  background: linear-gradient(to right, var(--bg-color) 0 100%) no-repeat top left / calc(100% - 30px) calc(100% - 30px), /*  bottom line    */ linear-gradient(to right, var(--bg-color) 0 100%) no-repeat bottom right / calc(100% - 30px) calc(100% - 30px), /*   right angle   */ linear-gradient(45deg, var(--bg-color) calc(50% - 1px), var(--bg-color) calc(50% - 1px) calc(50% + 1px), transparent calc(50% + 1px)) no-repeat right top / 31px 31px, /*     left angle */ linear-gradient(45deg, transparent calc(50% - 1px), var(--bg-color) calc(50% - 1px) calc(50% + 1px), var(--bg-color) calc(50% + 1px)) no-repeat left bottom / 31px 31px, /*     left pipe */ linear-gradient(to right, var(--bg-color) 0 100%) no-repeat 0 0 / 2px calc(100% - 30px), /*     right pipe */ linear-gradient(to right, var(--bg-color) 0 100%) no-repeat bottom right / 2px calc(100% - 30px);
+.menu__sub-link::after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease;
 }
-.aaa:hover::before,
-.aaa:hover::after {
-  transform: translate(0);
-  filter: brightness(0);
+.menu__sub-link:hover::after {
+  transform: scaleX(1);
+}
+.inverted .menu__link::after {
+  background-color: #000;
+}
+.inverted .menu__arrowfalse {
+  border-top: 10px solid #000000;
+}
+body .inverted {
+  background-color: #fff;
+  box-shadow: 0 3px 5px 0.3px rgba(0, 0, 0, 0.1);
+}
+.header.inverted .header__container .header__logo .logo__text {
+  color: #000;
+}
+.header.inverted .header__container .menu__body .menu__list li .menu__link {
+  color: #000;
 }
 .header {
   position: fixed;
@@ -65,7 +97,7 @@ a {
   left: 0;
   width: 100%;
   z-index: 10;
-  background-color: #9e2d8f;
+  background-color: #222831;
 }
 .header .header__container {
   max-width: 1200px;
@@ -88,30 +120,39 @@ a {
   display: flex;
   align-items: center;
 }
-.header .header__container .menu__body .menu__list li:hover {
-  text-decoration: underline;
-  text-underline-offset: 5px;
-}
 .header .header__container .menu__body .menu__list li .menu__link {
   color: white;
   font-size: 18px;
 }
 .header .header__container .menu__body .menu__list li .menu__sub-list {
+  box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.7);
   position: absolute;
   top: 100%;
-  right: 0;
-  background-color: black;
+  left: 0;
+  background-color: #393E46;
   padding: 15px;
-  min-width: 145px;
+  min-width: 187px;
   align-items: center;
   display: flex;
   flex-direction: column;
+}
+.header .header__container .menu__body .menu__list li .menu__sub-list::before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 4.5px 5px 4.5px;
+  border-color: transparent transparent #393E46 transparent;
+  position: absolute;
+  top: -5px;
+  left: 34px;
 }
 .header .header__container .menu__body .menu__list li .menu__sub-list li {
   margin: 0px 0px 24px 0px;
 }
 .header .header__container .menu__body .menu__list li .menu__sub-list li .menu__sub-link {
-  color: aqua;
+  color: #ffffff;
   padding-bottom: 10px;
 }
 .header .header__container .menu__body .menu__list li .menu__sub-list li:last-child {
@@ -172,41 +213,54 @@ body._mobile .menu__list > li._active .menu__sub-list {
   transform: translate(0px, 0px);
   pointer-events: all;
 }
-.swiper__section {
-  margin-top: -25px;
+@media (max-aspect-ratio: 3/2) {
+  .parallax .parallax__body .parallax__images .images-parallax__human {
+    background-position: 20% top;
+  }
 }
-.swiper__section .swiper_section {
-  width: 1140px;
+.images-parallax__clouds,
+.images-parallax__mountains,
+.images-parallax__human {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+}
+._container {
+  max-width: 1140px;
   margin: 0 auto;
-}
-.swiper__section .swiper_section .swiper__boxes {
-  margin-bottom: 18px;
   margin-top: 160px;
-  display: flex;
 }
-.swiper__section .swiper_section .swiper__boxes .text_box {
-  width: 50%;
-  margin: 0 auto;
-  margin-bottom: 60px;
+.content {
+  color: #fff;
+  background-color: #0b1d26;
+  position: relative;
+  z-index: 66;
 }
-.swiper__section .swiper_section .swiper__boxes .text_box .swiper_title {
-  font-size: 3.75rem;
-  color: #007aff;
-  font-weight: 600;
-  margin-bottom: 20px;
+.content::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  transform: translate(0px, -100%);
+  background: linear-gradient(180deg, rgba(11, 29, 38, 0) 5%, #0b1d26 100%);
 }
-.swiper__section .swiper_section .swiper__boxes .text_box .swiper_text {
-  font-size: 2.25rem;
-  letter-spacing: -0.025em;
-  font-weight: 500;
-  color: #007aff;
-  line-height: 1.25;
+.content .content__container .content__title {
+  font-size: 35px;
+  margin: 0px 0px 30px 0px;
 }
-.swiper__section .swiper_section .swiper__boxes .slide_box {
-  width: 50%;
+.content .content__container .content__text {
+  font-size: 16px;
+  line-height: 150%;
+}
+.content .content__container .content__text p {
+  margin: 0px 0px 30px 0px;
 }
 .footer {
-  background: #333333;
+  background: #EEEEEE;
 }
 .footer__container {
   max-width: 1140px;
@@ -226,7 +280,7 @@ footer .footer__container p {
 footer .footer__container .footer-heading {
   margin-bottom: 20px;
   font-size: 16px;
-  color: #fff;
+  color: #000000;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
 }
@@ -283,86 +337,6 @@ footer .slide_box .slide_box_div {
     visibility: hidden;
     transition: all 0.4s ease 0s;
     pointer-events: none;
-  }
-  .swiper-container {
-    height: 199px;
-    width: 1200px;
-    margin: 0 auto;
-    overflow: hidden;
-  }
-  body .swiper-slide {
-    width: auto !important;
-    margin-right: 51px;
-    border-radius: 50%;
-  }
-  .menu__sub-listt {
-    transform: translate(0px, 20%);
-    opacity: 0;
-    visibility: hidden;
-    background-color: #ffffff;
-    transition: all 0.3s ease 0s;
-    pointer-events: none;
-    position: absolute;
-    margin-top: 60px;
-  }
-  .menu__sub-listt li {
-    width: 200px;
-    margin-top: 10px;
-  }
-  .swiper-wrapper > li:hover .menu__sub-listt {
-    opacity: 1;
-    visibility: visible;
-    transform: translate(0px, 20%);
-    pointer-events: all;
-  }
-  .swiper-slide {
-    text-align: center;
-    font-size: 17px;
-    background: #ffffff;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .swiper-slide-active a {
-    background: #000000;
-    border-radius: 100%;
-    line-height: 31px;
-    color: #ffffff;
-    padding: 0 12px;
-    border: 2px solid var(--bg-color);
-  }
-  body .swiper-slide-active .menu__sub-linkk {
-    background: #ffffff;
-    border-radius: 0%;
-    line-height: 0px;
-    color: black;
-    border: none;
-  }
-  body .swiper-wrapper {
-    margin-left: -453px;
-    height: 38px;
-  }
-  body .swiper-button-next {
-    right: 255px;
-    margin-top: calc(482px - (var(--swiper-navigation-size)/2));
-    color: #000;
-    font-size: 7px;
-    top: 0;
-  }
-  body .swiper-button-next:after {
-    font-size: 19px;
-    color: black;
-  }
-  body .swiper-button-prev:after {
-    font-size: 19px;
-    color: black;
-  }
-  body .swiper-button-prev {
-    left: 351px;
-    font-size: 7px;
-    margin-top: calc(496px - (var(--swiper-navigation-size)/2));
-    top: 0;
   }
 }
 @media only screen and (max-width: 1000px) {
@@ -423,7 +397,7 @@ footer .slide_box .slide_box_div {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.94);
+    background-color: #EEEEEE;
     padding: 100px 30px 30px 30px;
     transition: left 0.3s ease 0s;
     overflow: scroll;
@@ -436,7 +410,7 @@ footer .slide_box .slide_box_div {
     top: 0;
     left: 0;
     height: 70px;
-    background: linear-gradient(#fa5a29, #ff742b);
+    background: #222831;
     z-index: 2;
   }
   .menu__body .menu__list {
@@ -451,22 +425,6 @@ footer .slide_box .slide_box_div {
   }
   body._lock {
     overflow: hidden;
-  }
-  .swiper__section {
-    margin-top: -50px;
-    margin-left: 20px;
-  }
-  .swiper__section .swiper_section .swiper__boxes .text_box .swiper_title {
-    font-size: 40px;
-  }
-  .swiper__section .swiper_section .swiper__boxes .text_box .swiper_text {
-    font-size: 30px;
-  }
-  .swiper_box {
-    margin-top: -65px;
-  }
-  .swiper-button-next::after {
-    background: linear-gradient(to right, var(--yt-spec-brand-background-primary) 20%, rgba(255, 255, 255, 0) 80%);
   }
   .footer__container {
     flex-direction: column;
