--- a/style/main.less
+++ b/style/main.less
@@ -1,5 +1,11 @@
 @import "reset.css";
 
+@1: #222831;
+@2: #393E46;
+@3: #00ADB5;
+@4: #EEEEEE;
+
+
 html{
     box-sizing: border-box;
 }
@@ -20,109 +26,115 @@ a{
 
 
 
-///////////////////////////////////hover me /////////////////////////////////////////////////
-.div__aaa{
-    margin-top: 60px;
+
+
+
+
+
+
+
+
+
+
+
+ .one{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #cacaca;
+    height: 250px;
+    background: @1;
+    color: white;
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  }
+  .two{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #cacaca;
+    height: 250px;
+    background: @3;
+    color: white;
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  }
+
+  .three{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #cacaca;
+    height: 250px;
+    background: @4;
+    color: white;
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  }
+
+
+////////////////////////////////////////transform: scaleX(1);//////////////////////////////////////
+  .menu__link::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    bottom: 15px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease;
 }
 
-:root {
-    --bg-color: #fad304;
-  }
-  
- 
-  
-  .aaa {
-    font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 1.3rem;
-    padding: 20px 40px;
-    position: relative;
-    cursor: pointer;
-  }
-  
-  .aaa:hover {
-    color: #fff;
-  }
-  
-  .aaa::before, .aaa::after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      transition: transform 0.3s ease, filter 0.5s ease;
-  }
-  
-  .aaa::after {
-        z-index: 1;
-      transform: translate(4px, -4px);
-    background: 
-  /*   top line   */ linear-gradient(to right, black 0 100%)
-        no-repeat top left / calc(100% - 30px) 2px,
-      /*  bottom line    */ linear-gradient(to right, black 0 100%) no-repeat
-        bottom right / calc(100% - 30px) 2px,
-      /*   right angle   */
-        linear-gradient(
-          45deg,
-          transparent calc(50% - 1px),
-          black calc(50% - 1px) calc(50% + 1px),
-          transparent calc(50% + 1px)
-        )
-        no-repeat right top / 31px 31px,
-      /*     left angle */
-        linear-gradient(
-          45deg,
-          transparent calc(50% - 1px),
-          black calc(50% - 1px) calc(50% + 1px),
-          transparent calc(50% + 1px)
-        )
-        no-repeat left bottom / 31px 31px,
-      /*     left pipe */ linear-gradient(to right, black 0 100%) no-repeat 0 0 /
-        2px calc(100% - 30px),
-      /*     right pipe */ linear-gradient(to right, black 0 100%) no-repeat
-        bottom right / 2px calc(100% - 30px);
-  }
-  
-  .aaa::before {
-    z-index: -1;
-    transform: translate(-4px, 4px);
-    background: 
-    /*   top line   */ linear-gradient(to right, var(--bg-color) 0 100%)
-        no-repeat top left / calc(100% - 30px) calc(100% - 30px),
-      /*  bottom line    */ linear-gradient(to right, var(--bg-color) 0 100%) no-repeat
-        bottom right / calc(100% - 30px) calc(100% - 30px),
-      /*   right angle   */
-        linear-gradient(
-          45deg,
-          var(--bg-color) calc(50% - 1px),
-          var(--bg-color) calc(50% - 1px) calc(50% + 1px),
-          transparent calc(50% + 1px)
-        )
-        no-repeat right top / 31px 31px,
-      /*     left angle */
-        linear-gradient(
-          45deg,
-          transparent calc(50% - 1px),
-          var(--bg-color) calc(50% - 1px) calc(50% + 1px),
-          var(--bg-color) calc(50% + 1px)
-        )
-        no-repeat left bottom / 31px 31px,
-      /*     left pipe */ linear-gradient(to right, var(--bg-color) 0 100%) no-repeat 0 0 /
-        2px calc(100% - 30px),
-      /*     right pipe */ linear-gradient(to right, var(--bg-color) 0 100%) no-repeat
-        bottom right / 2px calc(100% - 30px);
-  }
-  
-  .aaa:hover::before,
-  .aaa:hover::after {
-      transform: translate(0);
-      filter: brightness(0);
-    }
+.menu__link:hover::after{
+    transform: scaleX(1);
+}
+.menu__sub-link::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease;
+}
 
-///////////////////////////////////////////////////////////////////////////////////////
+.menu__sub-link:hover::after{
+    transform: scaleX(1);
+}
+
+
+ /////////////////////////////////transform: scaleX(1);///////////////////////////////////
+
+ .inverted .menu__link::after{
+    background-color: #000;
+ }
+ 
+ .inverted .menu__arrowfalse {
+    border-top: 10px solid rgb(0, 0, 0);
+ }
+//////////////////////////////////////////header inverted/////////////////////////////////////////////
+
+
+
+body .inverted {
+    background-color: #fff;
+    box-shadow: 0 3px 5px 0.3px rgba(0,0,0,0.1);
+    
+  }
+  .header.inverted .header__container .header__logo .logo__text {
+    color: #000;
+  }
+  .header.inverted .header__container .menu__body .menu__list li .menu__link {
+    color: #000;
+  }
+
+
+////////////////////////////////////////header inverted///////////////////////////////////////////////
+
+
+
 
 
 
@@ -132,7 +144,7 @@ a{
     left: 0;
     width: 100%;
     z-index: 10;
-    background-color: rgb(158, 45, 143);
+    background-color: @1;
     .header__container{
         max-width: 1200px;
         margin: 0px auto;
@@ -162,27 +174,49 @@ a{
                     display: flex;
                     align-items: center;
                     &:hover{
-                        text-decoration: underline;
-                        text-underline-offset: 5px;
+                        
+                            
+                        
+                        //text-decoration: underline;
+                       // text-underline-offset: 5px;
                     }
                     .menu__link{
                         color: white; 
                         font-size: 18px;
                     }
                     .menu__sub-list{
+
+
+                        &::before {
+                            content: "";
+                            display: block;
+                            width: 0;
+                            height: 0;
+                            border-style: solid;
+                            border-width: 0 4.5px 5px 4.5px;
+                            border-color: transparent transparent @2 transparent;
+                            position: absolute;
+                            top: -5px;
+                            left: 34px;
+                        }
+                        
+                        
+                         
+                       
+                        box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.7);
                         position: absolute;
                         top: 100%;
-                        right: 0;
-                        background-color: black;
+                        left: 0;
+                        background-color: @2;
                         padding: 15px;
-                        min-width: 145px;
+                        min-width: 187px;
                         align-items: center;
                         display: flex;
                         flex-direction: column;
                         li{
                             margin: 0px 0px 24px 0px;
                             .menu__sub-link{
-                                color: aqua;
+                                color: rgb(255, 255, 255);
                                 padding-bottom: 10px;
                                 }
                         }
@@ -254,57 +288,84 @@ body._mobile .menu__list > li._active .menu__sub-list{
     pointer-events: all;
 }
 
+//////////////////////parallax section///////////////////////////////
 
 
 
+    
 
-//////////////////////swiper section///////////////////////////////
-.swiper__section{
-    
-    margin-top: -25px;
-    
-    
-    
-    .swiper_section{
-       
-        width: 1140px;
-        margin: 0 auto;
-        .swiper__boxes{
-            margin-bottom: 18px;
-            margin-top: 160px;
-            display: flex;
-            .text_box{
-                width: 50%;
-                
-                margin: 0 auto;
-                margin-bottom: 60px;
-                .swiper_title{
-                    font-size: 3.75rem;
-                    color: #007aff;
-                    font-weight: 600;
-                    margin-bottom: 20px;
-                }
-                .swiper_text{
-                    font-size: 2.25rem;
-                    letter-spacing: -.025em;
-                    font-weight: 500;
-                    color: #007aff;
-                    line-height: 1.25;
-                }
-            }
-            .slide_box{
-                width: 50%;
-                
+ 
+
+  @media (max-aspect-ratio: 3/2) {
+    .parallax .parallax__body .parallax__images .images-parallax__human { 
+        background-position: 20% top; 
+    }
+  }
+
+
+
+.images-parallax__clouds,
+.images-parallax__mountains,
+.images-parallax__human{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+}
+
+._container{
+    max-width: 1140px;
+    margin: 0 auto;
+    margin-top: 160px;
+}
+
+
+.content{
+    color: #fff;
+    background-color: #0b1d26;
+    position: relative;
+    z-index: 66;
+    &::before{
+        pointer-events: none;
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 300px;
+        transform: translate(0px, -100%);
+        background: linear-gradient(180deg, rgba(11, 29, 38, 0) 5%, #0b1d26 100%);
+
+    }
+    .content__container{
+        .content__title{
+            font-size: 35px;
+            margin: 0px 0px 30px 0px;
+
+        }
+        .content__text{
+            font-size: 16px;
+            line-height: 150%;
+            p{
+                margin: 0px 0px 30px 0px; 
             }
         }
-        
     }
-    
 }
+
+
+
+
+
+
+
+
+  
+
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
 
 .footer{
-    background:  #333333;
+    background:  @4;
 }
 
 .footer__container{
@@ -324,7 +385,7 @@ footer{
         .footer-heading{
             margin-bottom: 20px;
             font-size: 16px;
-            color: #fff;
+            color: rgb(0, 0, 0);
             text-transform: uppercase;
             letter-spacing: .2rem;
         }
@@ -374,8 +435,14 @@ footer{
         content: "";
     }
 }
-///////////////////swiper section//////////////////////////////
+///////////////////parallax section//////////////////////////////
  
+
+
+
+
+
+
 }
 
 
@@ -424,102 +491,10 @@ footer{
 
 
 
-//////from swiperlink css////
 
 
-.swiper-container{
-    height: 199px;
-    width: 1200px;
-    margin: 0 auto;
-    overflow: hidden;
-    
-    
+
 }
-
-
-
-
-  body .swiper-slide {
-    width: auto !important;
-    
-    margin-right: 51px;
-    border-radius: 50%;
-  }
-  .menu__sub-listt {
-    transform: translate(0px, 20%);
-    opacity: 0;
-    visibility: hidden;
-    background-color: #ffffff;
-    transition: all 0.3s ease 0s;
-    pointer-events: none;
-    position: absolute;
-    margin-top: 60px;
-  }
-  .menu__sub-listt li {
-    width: 200px;
-    margin-top: 10px;
-  }
-  .swiper-wrapper > li:hover .menu__sub-listt {
-    opacity: 1;
-    visibility: visible;
-    transform: translate(0px, 20%);
-    pointer-events: all;
-    
-  }
-  
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 17px;
-    background: #ffffff;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .swiper-slide-active a {
-    background: #000000;
-    border-radius: 100%;
-    line-height: 31px;
-    color: rgb(255, 255, 255);
-    padding: 0 12px;
-    border: 2px solid var(--bg-color);
-  }
-  body .swiper-slide-active .menu__sub-linkk {
-    background: #ffffff;
-    border-radius: 0%; 
-    line-height: 0px;
-    color: black;
-    border: none;
-  }
- 
-  body .swiper-wrapper {
-    margin-left: -453px;
-    height: 38px;
-  }
-  body .swiper-button-next {
-    right: 255px;
-    margin-top: calc(482px - (var(--swiper-navigation-size)/2));
-    color: #000;
-    font-size: 7px;
-    top: 0;
-}
-  
-  body .swiper-button-next:after {
-    font-size: 19px;
-    color: black;
-  }
-  body .swiper-button-prev:after {
-    font-size: 19px;
-    color: black;
-  }
-  body .swiper-button-prev {
-    left: 351px;
-    font-size: 7px;
-    margin-top: calc(496px - (var(--swiper-navigation-size)/2));
-    top: 0;
-}
-  }
 
 
 
@@ -528,6 +503,10 @@ footer{
 
 
 @media only screen and (max-width: 1000px){
+   
+
+
+
 
 body .header .header__container .menu__body .menu__list li .menu__sub-list{
     position: relative;
@@ -593,7 +572,7 @@ body .header .header__container .menu__body .menu__list > li._active .menu__sub-
     top: 0;
     width: 100%;
     height: 100%;
-    background-color:  rgba(0, 0, 0, 0.94);
+    background-color:  @4;
     padding: 100px 30px 30px 30px;
     transition: left 0.3s ease 0s;
     overflow: scroll; 
@@ -605,7 +584,7 @@ body .header .header__container .menu__body .menu__list > li._active .menu__sub-
         top: 0;
         left: 0;
         height: 70px;
-        background: linear-gradient(#fa5a29,#ff742b);
+        background: @1;
         z-index: 2;
         }
     .menu__list{
@@ -629,30 +608,6 @@ body._lock{
 
 
 
-/////////////////////////////////////////////////////////////////////////////////////////////
-.swiper__section{
-    margin-top: -50px;
-    margin-left: 20px;
-}
-
-.swiper__section .swiper_section .swiper__boxes .text_box .swiper_title {
-    font-size: 40px;
-}
-
-
-.swiper__section .swiper_section .swiper__boxes .text_box .swiper_text{
-    font-size: 30px;
-
-}
-.swiper_box{
-    margin-top: -65px;
-}
-
-.swiper-button-next{
-    &::after{
-        background: linear-gradient(to right,var(--yt-spec-brand-background-primary) 20%,rgba(255,255,255,0) 80%);
-    }
-}
 
 
 /////////////////////////footer///////////////////////
