--- a/style/main.css
+++ b/style/main.css
@@ -340,6 +340,18 @@ footer .slide_box .slide_box_div {
   }
 }
 @media only screen and (max-width: 1000px) {
+  ._lock .header.inverted .header__container .header__logo .logo__text {
+    color: #fff;
+  }
+  ._lock .inverted .menu__icon::before {
+    background-color: #fff;
+  }
+  ._lock .inverted .menu__icon span {
+    background-color: #fff;
+  }
+  ._lock .inverted .menu__icon::after {
+    background-color: #fff;
+  }
   .inverted .menu__icon::before {
     background-color: #000;
   }
@@ -406,7 +418,7 @@ footer .slide_box .slide_box_div {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #EEEEEE;
+    background-color: #00ADB5;
     padding: 100px 30px 30px 30px;
     transition: left 0.3s ease 0s;
     overflow: scroll;
