--- a/style/main.less
+++ b/style/main.less
@@ -500,10 +500,21 @@ footer{
 
 @media only screen and (max-width: 1000px){
    
-   // .inverted .menu__icon span, .menu__icon::before, .menu__icon::after {
-   //         background-color: #000;
-   // }
     
+    ._lock .header.inverted .header__container .header__logo .logo__text{
+        color: #fff;
+    }
+
+    ._lock .inverted .menu__icon::before{
+        background-color: #fff;
+       }
+       ._lock .inverted .menu__icon span{
+        background-color: #fff;
+       }
+       ._lock .inverted .menu__icon::after{
+        background-color: #fff;
+       }
+
    
    
    .inverted .menu__icon::before{
@@ -583,7 +594,7 @@ body .header .header__container .menu__body .menu__list > li._active .menu__sub-
     top: 0;
     width: 100%;
     height: 100%;
-    background-color:  @4;
+    background-color:  @3;
     padding: 100px 30px 30px 30px;
     transition: left 0.3s ease 0s;
     overflow: scroll; 
