._lock .header.inverted .header__container .menu__body .menu__list li .menu__link{         color: #fff;        }

--- a/style/main.css
+++ b/style/main.css
@@ -352,6 +352,9 @@ footer .slide_box .slide_box_div {
   ._lock .inverted .menu__icon::after {
     background-color: #fff;
   }
+  ._lock .header.inverted .header__container .menu__body .menu__list li .menu__link {
+    color: #fff;
+  }
   .inverted .menu__icon::before {
     background-color: #000;
   }
