--- a/style/main.less
+++ b/style/main.less
@@ -514,7 +514,9 @@ footer{
        ._lock .inverted .menu__icon::after{
         background-color: #fff;
        }
-
+       ._lock .header.inverted .header__container .menu__body .menu__list li .menu__link{
+        color: #fff;
+       }
    
    
    .inverted .menu__icon::before{
