--- a/style/main.less
+++ b/style/main.less
@@ -518,6 +518,10 @@ footer{
         color: #fff;
        }
    
+
+       ._lock .inverted .menu__arrowfalse {
+    border-top: 10px solid #f7f7f7;
+}
    
    .inverted .menu__icon::before{
     background-color: #000;
