--- a/style/main.less
+++ b/style/main.less
@@ -40,6 +40,7 @@ a{
 
 
  .one{
+    margin-top: 95px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,7 +56,7 @@ a{
     justify-content: center;
     background-color: #cacaca;
     height: 250px;
-    background: @3;
+    background: @2;
     color: white;
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
   }
@@ -66,11 +67,20 @@ a{
     justify-content: center;
     background-color: #cacaca;
     height: 250px;
+    background: @3;
+    color: white;
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  }
+  .four{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #cacaca;
+    height: 250px;
     background: @4;
     color: white;
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
   }
-
 
 ////////////////////////////////////////transform: scaleX(1);//////////////////////////////////////
   .menu__link::after{
@@ -163,10 +173,11 @@ body .inverted {
         height: 8rem;
         .header__logo{
             .logo__text{
-                font-size: 41px;
+                font-size: 36px;
                 position: relative;
                 z-index: 8;
                 color: white;
+                letter-spacing: 3px;
             }
             
             
@@ -205,11 +216,11 @@ body .inverted {
                         
                          
                        
-                        box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.7);
+                        box-shadow: 5px 5px 0 (@2);
                         position: absolute;
                         top: 100%;
                         left: 0;
-                        background-color: @2;
+                        background-color: @4;
                         padding: 15px;
                         min-width: 187px;
                         align-items: center;
@@ -218,7 +229,7 @@ body .inverted {
                         li{
                             margin: 0px 0px 24px 0px;
                             .menu__sub-link{
-                                color: rgb(255, 255, 255);
+                                color: @1;
                                 padding-bottom: 10px;
                                 }
                         }
@@ -292,77 +303,6 @@ body._mobile .menu__list > li._active .menu__sub-list{
 
 //////////////////////parallax section///////////////////////////////
 
-
-
-    
-
- 
-
-  @media (max-aspect-ratio: 3/2) {
-    .parallax .parallax__body .parallax__images .images-parallax__human { 
-        background-position: 20% top; 
-    }
-  }
-
-
-
-.images-parallax__clouds,
-.images-parallax__mountains,
-.images-parallax__human{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-}
-
-._container{
-    max-width: 1140px;
-    margin: 0 auto;
-    margin-top: 160px;
-}
-
-
-.content{
-    color: #fff;
-    background-color: #0b1d26;
-    position: relative;
-    z-index: 66;
-    &::before{
-        pointer-events: none;
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 300px;
-        transform: translate(0px, -100%);
-        background: linear-gradient(180deg, rgba(11, 29, 38, 0) 5%, #0b1d26 100%);
-
-    }
-    .content__container{
-        .content__title{
-            font-size: 35px;
-            margin: 0px 0px 30px 0px;
-
-        }
-        .content__text{
-            font-size: 16px;
-            line-height: 150%;
-            p{
-                margin: 0px 0px 30px 0px; 
-            }
-        }
-    }
-}
-
-
-
-
-
-
-
-
-  
 
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
 
@@ -441,15 +381,7 @@ footer{
  
 
 
-
-
-
-
 }
-
-
-
-
 
 
 ///////////////////////////////////////////////////////////footer end////////////////////////////////////////////////////////////
@@ -481,33 +413,20 @@ footer{
 
 
     
-///////////////////////////////////////////////////swiper//////////////////////////////////////////////////////////////////////////////
-
-
-
-
-
-
-
-
-
-
-
+///////////////////////////////////////////////////swiper/////////////////////////////////////////////////////////////////////////
 
 
 
 }
 
 
-
-
-
-
-
 @media only screen and (max-width: 1000px){
    
+
+    
     ._lock .menu__body::before{
         background-color: #00ADB5; 
+        border-bottom: 2px solid @1;
     }
 
 
@@ -525,7 +444,7 @@ footer{
         background-color: #fff;
        }
        ._lock .header.inverted .header__container .menu__body .menu__list li .menu__link{
-        color: #fff;
+        color: white;
        }
    
 
@@ -621,13 +540,14 @@ body .header .header__container .menu__body .menu__list > li._active .menu__sub-
         width: 100%;
         top: 0;
         left: 0;
-        height: 70px;
+        height: 125px;
         
         z-index: 2;
         }
     .menu__list{
         flex-direction: column;
         align-items: flex-start;
+        margin-top: 25px;
         li{
             flex-wrap: wrap;
         }
