--- a/style/main.less
+++ b/style/main.less
@@ -59,6 +59,48 @@ a{
 
 
 
+._mobile .header__logo{
+      display: flex;
+ }
+svg{
+    
+    width: 125px;
+    margin-left: 12px;
+    position: relative;
+    top: 50%;
+    margin-top: -3px;
+    left: 0;
+  }
+  ._mobile svg{
+    position: relative;
+    margin-bottom: 1px;
+    margin-left: 10px;
+  }
+  ._lock svg{
+    
+    z-index: 88;
+  }
+  
+
+
+  svg .draw{
+    stroke: black;
+    stroke-width: 2px;
+    fill: transparent;
+    animation: animate 5s forwards;
+    stroke-dasharray: 2400;
+    stroke-dashoffset: 2400;
+  }
+  
+  @keyframes animate {
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
+
+
+
+
 
 
 .svg_icons_css{
@@ -71,9 +113,58 @@ a{
 
 
 
+ .menu__link__footer::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease;
+}
+
+.menu__link__footer:hover::after{
+
+    transform: scaleX(1);
+}
+
+.logo__text::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: @4;
+    position: absolute;
+    left: 0;
+    bottom: 15px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease;
 
 
+}
+.logo__text:hover::after{
+    transform: scaleX(1);
+}
+.inverted .logo__text::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    position: absolute;
+    left: 0;
+    bottom: 15px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease;
 
+
+}
+.inverted .logo__text:hover::after{
+    transform: scaleX(1);
+}
 ////////////////////////////////////////transform: scaleX(1);//////////////////////////////////////
   .menu__link::after{
     content: '';
@@ -95,7 +186,7 @@ a{
     content: '';
     width: 100%;
     height: 2px;
-    background-color: @1;
+    background-color:black;
     position: absolute;
     left: 0;
     bottom: -2px;
@@ -123,7 +214,7 @@ a{
 
 
 body .inverted {
-    background-color: #fff;
+    background-color: @4;
     box-shadow: 0 3px 5px 0.3px rgba(0,0,0,0.1);
     
   }
@@ -136,6 +227,19 @@ body .inverted {
   
 
 ////////////////////////////////////////header inverted///////////////////////////////////////////////
+
+
+
+
+
+body .inverted .header__container .menu__body .menu__list li .menu__sub-list::before{
+    border-color: transparent transparent @1 transparent;
+
+    
+
+}
+
+
 
 
 
@@ -164,6 +268,7 @@ body .inverted {
         justify-content: space-between;
         height: 8rem;
         .header__logo{
+           
             .logo__text{
                 font-size: 36px;
                 position: relative;
@@ -195,7 +300,7 @@ body .inverted {
                     }
                     .menu__sub-list{
 
-
+                        
                         &::before {
                             content: "";
                             display: block;
@@ -207,6 +312,7 @@ body .inverted {
                             position: absolute;
                             top: -5px;
                             left: 34px;
+                            
                         }
                         
                         
@@ -343,8 +449,17 @@ footer{
         .nav_col{
             width: 33.33333%;
             display: flex;
+            .footer__listmenu{
+                li{
+                    margin-bottom: 15px;
+                    position: relative;
+                }
+
+                
+            }
             .nav__section__one{
                 width: 50%;
+                
             }
             .nav__section__two{
                 width: 50%;
@@ -437,7 +552,7 @@ footer{
 }
 
 
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1900px){
    
 
     
