--- a/style/main.less
+++ b/style/main.less
@@ -115,7 +115,7 @@ svg{
 
  .menu__link__footer::after{
     content: '';
-    width: 100%;
+    width: 120px;
     height: 2px;
     background-color: black;
     position: absolute;
