--- a/style/main.less
+++ b/style/main.less
@@ -81,7 +81,9 @@ svg{
     z-index: 88;
   }
   
-
+    ._lock svg .draw{
+        stroke: rgb(255, 255, 255);
+    }
 
   svg .draw{
     stroke: black;
